sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: not found: value getValeurs
    if(getValeurs(i)>getValeurs(i+1)){
       ^AlgCocktailSort1:8: error: not found: value getValeurs
    if(getValeurs(i)>getValeurs(i+1)){
                     ^